--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,7 @@
 
     }//end of h1
     h3{
+        line-height:1.5;
         font-size: 1.6rem;
         text-align: center;
         text-transform: lowercase;
@@ -20,10 +21,33 @@
 }//end of .top-container
 .bottom-container{
     display:flex;
-    flex-direction:row;
+    flex-direction: row;
+    justify-content: space-evenly;
     p{
-    }
-    img{
-        width:25%;
+        line-height: 1.5;
+        text-align: center;
+    }//end of p
+    .drill{
+        img{
+            margin-bottom: 1rem;
+            width:100%;
+            height:17.5rem;
+        }//end of drill-img
+        width:30%;
+    }//end of drill
+    .cooking{
+        img{
+            margin-bottom:1rem;
+            width: 100%;
+            height:17.5rem;
+        }//end of cooking-img
+        width:30%;
+    }//end of cooking
+    .clean{
+        img{
+            margin-bottom:1rem;
+            width:100%;
+        }
+        width:30%;
     }
 }
